fix cloud icon size different on mobile/desktop

--- a/app/src/app/components/jotc/jotc.component.css
+++ b/app/src/app/components/jotc/jotc.component.css
@@ -25,9 +25,5 @@
 }
 
 .smallIcon {
-    transform: scale(0.9);
-}
-
-.bigIcon {
-    font-size: 200%;
+    transform: scale(0.7);
 }
